KubernetesPractice/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demokubernetes-service
spec:
  selector:
    app: demokubernetes
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
